--- a/AmericanSignLanguageDetection.ipynb
+++ b/AmericanSignLanguageDetection.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "AmericanSignLanguageDetection",
       "provenance": [],
-      "authorship_tag": "ABX9TyPUKt6r69Ui+m927XlQCMQF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -800,11 +799,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cg6sO1VjLiPg",
-        "outputId": "93f04e44-224b-4a40-afda-53ab94a1d71b"
+        "outputId": "6a9b4f9f-2f00-4e5c-c14b-c5ea2fcb8fd3"
       },
       "source": [
         "from google.colab import drive\r\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/drive')\r\n"
       ],
       "execution_count": 2,
       "outputs": [
@@ -851,6 +850,62 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "xRsKJmdbhWio",
+        "outputId": "da7b1b19-d572-4332-bb57-23998fd3e2a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "data_set.class_to_idx #Shows labels\r\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'A': 0,\n",
+              " 'B': 1,\n",
+              " 'C': 2,\n",
+              " 'D': 3,\n",
+              " 'E': 4,\n",
+              " 'F': 5,\n",
+              " 'G': 6,\n",
+              " 'H': 7,\n",
+              " 'I': 8,\n",
+              " 'J': 9,\n",
+              " 'K': 10,\n",
+              " 'L': 11,\n",
+              " 'M': 12,\n",
+              " 'N': 13,\n",
+              " 'O': 14,\n",
+              " 'P': 15,\n",
+              " 'Q': 16,\n",
+              " 'R': 17,\n",
+              " 'S': 18,\n",
+              " 'T': 19,\n",
+              " 'U': 20,\n",
+              " 'V': 21,\n",
+              " 'W': 22,\n",
+              " 'X': 23,\n",
+              " 'Y': 24,\n",
+              " 'Z': 25,\n",
+              " 'del': 26,\n",
+              " 'nothing': 27,\n",
+              " 'space': 28}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -862,7 +917,7 @@
         "img, label = data_set[67777]\r\n",
         "print(img.shape, label)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,7 +946,7 @@
         "\r\n",
         "show_example(*data_set[67777])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,7 +995,7 @@
         "\r\n",
         "print(len(train_ds), len(val_ds), len(test_ds))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -962,7 +1017,7 @@
         "test_loader = torch.utils.data.DataLoader(test_ds,batch_size, shuffle=True, num_workers=4, pin_memory=True)\r\n",
         "val_loader = torch.utils.data.DataLoader(val_ds, batch_size, shuffle=True, num_workers=4, pin_memory=True)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -981,7 +1036,7 @@
         "\r\n",
         "print(img.shape) #Batch Size is now shown as 64\r\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1006,7 +1061,7 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\r\n",
         "print(device)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1118,7 @@
         "        x = self.classifier(x)\r\n",
         "        return x\r\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1074,7 +1129,7 @@
       "source": [
         "model = Net().to(device)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1088,7 +1143,7 @@
         "optimizer = optim.Adam(model.parameters(),lr = 0.001)\r\n",
         "num_epochs = 3"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1154,7 +1209,7 @@
         "check_accuracy(train_loader,model)\r\n",
         "\r\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1226,7 +1281,7 @@
       "source": [
         "check_accuracy(val_loader,model)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,7 +1304,7 @@
       "source": [
         "check_accuracy(test_loader,model)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,7 +1348,7 @@
         "model = models.vgg16(pretrained=True)\r\n",
         "model"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1391,7 +1446,7 @@
       "source": [
         "model.fc = nn.Linear(in_features = 4096, out_features = 29) #Changing Linear Layer for our Outptul Class"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1406,7 +1461,7 @@
       "source": [
         "model.to(device) #Moving Model to GPU"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1477,7 +1532,7 @@
         "criterion = nn.CrossEntropyLoss()\r\n",
         "optimizer = optim.Adam(model.parameters(),lr = 0.001)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1543,7 +1598,7 @@
         "check_accuracy(train_loader,model)\r\n",
         "\r\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1615,7 +1670,7 @@
       "source": [
         "check_accuracy(val_loader,model)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1638,7 +1693,7 @@
       "source": [
         "check_accuracy(test_loader,model)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1693,7 +1748,7 @@
         "model = models.resnet18(pretrained=True)\r\n",
         "model"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1830,7 +1885,7 @@
       "source": [
         "model.fc = nn.Linear(in_features = 512, out_features = 29)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1845,7 +1900,7 @@
       "source": [
         "model.to(device)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1954,7 +2009,7 @@
         "criterion = nn.CrossEntropyLoss()\r\n",
         "optimizer = optim.Adam(model.parameters(),lr = 0.001)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2020,7 +2075,7 @@
         "check_accuracy(train_loader,model)\r\n",
         "\r\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2092,7 +2147,7 @@
       "source": [
         "check_accuracy(val_loader,model)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2115,7 +2170,7 @@
       "source": [
         "check_accuracy(test_loader,model)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2170,7 +2225,7 @@
         "model = models.googlenet(pretrained=True)\r\n",
         "model"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2543,7 +2598,7 @@
       "source": [
         "model.fc = nn.Linear(in_features =1024, out_features=29)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2558,7 +2613,7 @@
       "source": [
         "model.to(device)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2903,7 +2958,7 @@
         "criterion = nn.CrossEntropyLoss()\r\n",
         "optimizer = optim.Adam(model.parameters(),lr = 0.001)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2969,7 +3024,7 @@
         "check_accuracy(train_loader,model)\r\n",
         "\r\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3041,7 +3096,7 @@
       "source": [
         "check_accuracy(val_loader,model)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3064,7 +3119,7 @@
       "source": [
         "check_accuracy(test_loader,model)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
